# mlx-steer

./: .gitignore  LICENSE  README.md  index.js  package.json  pyproject.toml
.cofounder/: COFOUNDER_BRAIN.md  PROJECT_SETUP_GUIDE.md  SESSION_LOG.md  TASKS.md  TASKS_WEEK9.md
docs/: TASK_051_GEMMA4_VALIDATION.md  TASK_052_QWEN14B_VALIDATION.md
examples/: coding_agent_pairs.py
scripts/: task_051_validate_gemma4.py  task_052_validate_qwen14b.py  task_053_compute_gemma4_vectors.py  task_054_compute_qwen14b_vectors.py  task_055_chi_calibration_baseline.py
src/mlx_steer/: __init__.py
src/mlx_steer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mlx_steer/monitor/: __init__.py  calibration.py  chi.py  entropy.py  goal_drift.py  hidden_states.py  repetition.py
src/mlx_steer/steering/: __init__.py  compute_vectors.py  contrastive_pairs.py  extract_activations.py  injector.py
src/mlx_steer/utils/: __init__.py  capture_layer.py
tests/: test_chi_calibration.py  test_entropy.py  test_imports.py  test_repetition.py  test_steering_engine.py
vectors/gemma-4-e4b-it/: README.md
vectors/qwen2.5-coder-14b/: README.md
